--- a/.gitignore
+++ b/.gitignore
@@ -2,39 +2,7 @@
 *.sqlite3
 media/
 
-# Django stuff:
-*.log
-*.pot
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Distribution / packaging
-.Python
-env/
-bin/
-build/
-develop-eggs/
-dist/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
+myvenv
+local_settings.py
+__pycache__
 *.py[cod]
