--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-Django
-Pillow
-django-cleanup
-bleach
+appdirs==1.4.3
+bleach==2.0.0
+dj-database-url==0.4.2
+Django==1.10.7
+django-cleanup==0.4.2
+gunicorn==19.7.1
+html5lib==0.999999999
+olefile==0.44
+packaging==16.8
+Pillow==4.1.1
+pkg-resources==0.0.0
+pyparsing==2.2.0
+six==1.10.0
+webencodings==0.5.1
+whitenoise==3.3.0
+psycopg2==2.6.2
